--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,10 +14,9 @@
 
 .main-container {
   display: flex;
-  background-color: #dadada;
-  border-radius: 0.5em;
+  background: linear-gradient(135deg, #0f0f13 0%, #1a1a2e 100%);
+  color: #fff;
   justify-content: center;
-  margin: 1em;
   flex: 1;
   padding: 1em;
 }
