--- a/src/app/features/analysis/components/content-performance-chart/content-performance-chart.component.scss
+++ b/src/app/features/analysis/components/content-performance-chart/content-performance-chart.component.scss
@@ -1,6 +1,6 @@
 .chart-container {
-  background: white;
-  border-radius: 8px;
+  color: #ffffff;
+  background: #292929;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 1.5rem;
   height: 400px;
@@ -10,7 +10,6 @@
 
 .chart-container h2 {
   margin-top: 0;
-  color: #333;
   font-size: 1.2rem;
   margin-bottom: 1rem;
 }
