--- a/src/app/features/tables/components/export-data/export-data.component.html
+++ b/src/app/features/tables/components/export-data/export-data.component.html
@@ -2,11 +2,17 @@
   (click)="exportCsv()"
   class="w-64 bg-gradient-to-r from-green-600 to-green-800 text-white font-semibold py-2.5 px-6 rounded-lg shadow-lg hover:from-green-700 hover:to-green-900 transition-all transform hover:scale-105 flex items-center justify-center gap-2"
 >
-  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
-  </svg>
+  <mat-icon class="material-icons-outlined" style="font-size: 20px; width: 20px; height: 20px;">
+    file_download
+  </mat-icon>
   Exporter au format CSV
 </button>
+
 @if (showErrorMessage) {
+  <div class="mt-2 text-red-500 flex items-center gap-2">
+    <mat-icon class="material-icons-outlined" style="font-size: 18px; width: 18px; height: 18px;">
+      error_outline
+    </mat-icon>
     <p>Il n'y a aucune donnée à exporter</p>
+  </div>
 }
