--- a/src/app/features/tables/components/table-nav-bar/table-nav-bar.component.html
+++ b/src/app/features/tables/components/table-nav-bar/table-nav-bar.component.html
@@ -1,17 +1,13 @@
 <div class="w-full flex justify-center items-center text-center mb-8">
-  <!-- Bouton Précédent -->
   <button
     (click)="goToPreviousPage()"
     [disabled]="currentPage === 1"
     class="px-4 py-2.5 bg-gray-800 hover:bg-gray-700 text-gray-300 rounded-l-lg border border-gray-700 flex items-center transition-all
       disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-gray-800"
   >
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-      <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
-    </svg>
+    <mat-icon>chevron_left</mat-icon>
   </button>
 
-  <!-- Liste des tables -->
   <div class="flex flex-wrap justify-center gap-3 mx-4">
     @for (table of currentTables; track $index) {
       <app-table-card
@@ -22,15 +18,12 @@
     }
   </div>
 
-  <!-- Bouton Suivant -->
   <button
     (click)="goToNextPage()"
     [disabled]="currentPage === totalPages"
     class="px-4 py-2.5 bg-gray-800 hover:bg-gray-700 text-gray-300 rounded-r-lg border border-gray-700 flex items-center transition-all
       disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-gray-800"
   >
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-      <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-    </svg>
+    <mat-icon>chevron_right</mat-icon>
   </button>
 </div>
