Commit Fix Export CSV et ajout messages d'erreurs

--- a/src/app/features/init-add/components/add-sample/add-sample.component.html
+++ b/src/app/features/init-add/components/add-sample/add-sample.component.html
@@ -19,4 +19,7 @@
     <mat-icon>add_circle</mat-icon>
     Ajouter des données prédéfinies
   </button>
+  @if (showErrorMessage) {
+    <p class="text-base text-red-500 mb-1">Une erreur est survenue, n'hésitez pas à réinitialiser la base de données si le problème persiste</p>
+  }
 </div>
