--- a/src/app/features/tables/pages/table-list-page/table-list-page.component.html
+++ b/src/app/features/tables/pages/table-list-page/table-list-page.component.html
@@ -2,11 +2,11 @@
   <app-table-nav-bar (tableSelected)="handleTableSelection($event)"></app-table-nav-bar>
 
   <div class="card-info">
-    <app-table-card-info (sendTablesData)="initTablesData($event)" [tableName]="selectedTable" />
+    <app-table-card-info (sendTablesData)="initTablesData($event)" [tableName]="selectedTable"/>
   </div>
 
   <div class="button-container">
-    <app-export-data [tablesData]="tablesData" [tableName]="selectedTable"></app-export-data>
+    <app-export-data [tableName]="selectedTable"></app-export-data>
     <app-import-data [tableName]="selectedTable"></app-import-data>
   </div>
 </div>
