--- a/src/app/shared/pages/not-found/not-found.component.html
+++ b/src/app/shared/pages/not-found/not-found.component.html
@@ -1,1 +1,12 @@
-<p>not-found works!</p>
+<div class="container-not-found">
+  <div
+    class="not-found-container bg-gradient-to-br from-gray-900 to-gray-800 text-gray-100 flex flex-col items-center justify-center p-10">
+    <div class="bg-gray-800 border border-gray-700 rounded-lg shadow-lg p-12 text-center max-w-xl w-full space-y-6">
+      <mat-icon class="material-icons-outlined text-gray-500" style="font-size: 96px;">
+        error_outline
+      </mat-icon>
+      <h1 class="text-4xl font-bold">Erreur 404</h1>
+      <p class="text-lg text-gray-400">Oups... la page que vous cherchez n'existe pas</p>
+    </div>
+  </div>
+</div>
