renommage nom site

--- a/front/src/app/features/dashboard/pages/home-page/home-page.component.html
+++ b/front/src/app/features/dashboard/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="home-container">
   <div class="welcome-section">
-    <h1>Netflix Data</h1>
+    <h1>YNM Data</h1>
     <p class="subtitle">
       Plateforme de données
     </p>
